# EverMemOS

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  docker-compose.yaml  env.template  pyproject.toml
.gitlab/: CODEOWNERS
data/: README.md
data_format/group_chat/: group_chat_format.md  group_chat_format.py
demo/: README.md  README_zh.md  extract_memory.py  i18n_texts.py  memory_config.py  simple_demo.py  test_v3_api_http.py  test_v3_retrieve_http.py  verify_http_api.py
demo/chat/: orchestrator.py  session.py  ui.py
demo/results/: agentic_test_results.json  retrieval_test_results.json
demo/tools/: clear_all_data.py  resync_memcells.py  resync_personal_memories.py  test_agentic_retrieve.py  test_retrieval_comprehensive.py  test_v1api_search.py
demo/utils/: simple_memory_manager.py
docs/: README.md  STARTER_KIT.md
docs/advanced/: GROUP_CHAT_GUIDE.md  METADATA_CONTROL.md  RETRIEVAL_STRATEGIES.md
docs/api_docs/: agentic_v3_api.md  agentic_v3_api_zh.md  memory_api.md  memory_api_zh.md
docs/dev_docs/: addon_development_guide.md  addon_development_guide_zh.md  agentic_retrieval_guide.md  agentic_retrieval_guide_zh.md  agentic_retrieve_testing.md  agentic_retrieve_testing_zh.md  api_usage_guide.md  api_usage_guide_zh.md  bootstrap_usage.md  bootstrap_usage_zh.md  chat_api_alignment.md  chat_with_memory_http_api_migration.md  development_guide.md  development_guide_zh.md  development_standards.md  development_standards_zh.md  getting_started.md  getting_started_zh.md  run_memorize_usage.md  run_memorize_usage_zh.md
docs/usage/: BATCH_OPERATIONS.md  CONFIGURATION_GUIDE.md  CONFIGURATION_GUIDE_zh.md
evaluation/: README.md  README_zh.md  cli.py
evaluation/config/datasets/: evermembench.yaml
evaluation/src/: __init__.py
src/: addon.py  application_startup.py  base_app.py  run_memorize.py
src/agentic_layer/: converter.py  fetch_mem_service.py  memory_manager.py  memory_models.py  vectorize_service.py
src/api_specs/: memory_types.py  request_converter.py
src/biz_layer/: conversation_data_repo.py  conversation_data_repo_impl.py  mem_db_operations.py  mem_memorize.py  memcell_milvus_sync.py  memcell_sync.py  memorize_config.py  memorize_worker_service.py  personal_memory_sync.py
src/common_utils/: datetime_utils.py  project_path.py
src/component/: elasticsearch_client_factory.py  kafka_consumer_factory.py
src/core/di/: __init__.py  (+9 more)
src/memory_layer/: memory_manager.py  types.py
tests/: STABILITY_ANALYSIS_AND_TESTING.md  batch_test_memorize_offline.py  bootstrap_test_template.py  quick_test_memorize_offline.py  run_stability_tests.py  sample_memory_operations_service.py  test_agentic_layer.py  test_agentic_layer_retrieve_mem.py  test_conv_memcell_extractor.py  test_conversation_status_raw_repository.py  test_converter.py  test_core_memory_raw_repository.py  test_dispatcher.py  test_episodic_memory_es_repository.py  test_episodic_memory_milvus_repository.py  test_fetch_mem_service.py  test_group_profile_datetime_check.py  test_group_profile_raw_repository.py  test_group_profile_simple.py  test_group_user_profile_memory_raw_repository.py  test_im_message_raw_repository.py  test_keyword_vocabulary_milvus_repository.py  test_memcell_raw_repository.py  test_memorize_offline.py  test_memory_models.py  test_migrate_user_goal_to_work_responsibility.py  test_msg_group_queue_manager.py  test_pickle_size_analysis.py  test_rate_limiter_quick.py  test_rawdata_json_serialization.py  test_real_conversation_pipeline.py  test_redis_distributed_lock.py  test_redis_length_cache.py  test_redis_windows_cache.py  test_smart_text_parser.py  test_stability_concurrency.py  test_stability_database.py  test_stability_integration.py  test_task_cancel.py  test_task_cancel_2.py  (+2 more)
(+84 files in other folders)
